#resolver="2"

[package]
name = "multicore-exp1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = ">=0.6.15,<0.8"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"
adafruit-feather-rp2040 = "*"
panic-probe = "*"
